--- a/style.css
+++ b/style.css
@@ -352,6 +352,33 @@ header{
 
 }
 
+@media(max-width:800px){
+    .content-section3{
+        width: 350px;
+        height: 400px;
+    }
+}
+@media(max-width:500px){
+    .content-section3 h1{
+        font-size: 22px;
+    }
+    .content-section3{
+        width: 300px;
+        text-wrap: wrap;
+    }
+    .section3{
+        padding: 20px 20px;
+        padding: right  20px;
+    }
+    .content-section3{
+        /* padding: 5px 5px; */
+    }
+    .section3{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
 .section4 img{
     width: 100%;
 }
