--- a/responsive.css
+++ b/responsive.css
@@ -140,3 +140,28 @@
             font-size: 12px;
         }
     }
+
+
+    @media(min-width:1100px){
+        .content-section3{
+            color: #111;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            width: 40%;
+            position: absolute;
+            top: 130px;
+            left: 30px;
+            padding: 20px 20px;
+            background-color: #fff;
+            /* margin-top: 100px; */
+            
+        }
+        .section3 img{
+            height: 90%;
+        }
+    }
+
+    @media(max-width:500px){
+        .section3-img{
+            height: 250px;
+        }
+    }
