--- a/style.css
+++ b/style.css
@@ -310,27 +310,29 @@ header{
 }
 
 .section3{
-    background-image: url(section3\ bg.avif);
-    background-size: cover;
-    min-height: 60vh;
-    
+    height: 80vh;
     width: 80%;
-    margin: 50px 10%;
-    padding: 40px 40px;
-    
+    margin: auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+}
+.content-section3{
+    width: 80%;
 }
 .section3:hover{
     transform: scale(1.06);
     /* padding: 50px 20px; */
 }
-.content-section3{
-    color: #fff;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    width: 30%;
-    position: absolute;
-    margin-top: 100px;
-    
+.section3-img{
+    width: 100%;
+    height: 70%;
 }
+
+
+
 .content-section3 h1{
     margin-bottom: 10px;
     letter-spacing: 2px;
@@ -348,9 +350,11 @@ header{
     margin-top: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
-    
+    /* padding: 50px 50px; */
 
 }
+
+
 
 @media(max-width:800px){
     .content-section3{
